# FFmpeg-DirectX-Player-Demo

./: CMakeLists.txt  README.md
src/: dx11_renderer.cpp  dx11_renderer.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  main.cpp
